# capture-the-flag

./: README.md
htb-ctf-2024/crypto-primary-knowledge/: README.md
htb-ctf-2024/crypto-rot128/: readme.md
osu-ctf-2024/crypto-korean-offline-mafia/: README.md  server.py
osu-ctf-2024/crypto-korean-offline-mafia/solution/: README.md  pyproject.toml  solve.py
osu-ctf-2024/crypto-roll/: README.md
osu-ctf-2024/crypto-roll/solution/: Cargo.toml  README.md  out.txt  poetry  pyproject.toml
osu-ctf-2024/crypto-roll/solution/solver/: __init__.py
osu-ctf-2024/crypto-roll/solution/src/: main.rs
sdctf-2024/crypto-reallycomplexproblem/: '  Dockerfile  README.md  solve.sage  solve.sage.py  solvescript.sh
squ1rrel-ctf-2024/crypto-lottery/: README.md  solve.py  squ1rrel-lottery.py
utctf-2024/cryptordle/: README.md  main.py  requirements.txt  solve.py  solver.sage
utctf-2024/cryptordle/src/: readme.md
