[tool.poetry]
name = "solver"
version = "0.1.0"
description = ""
authors = ["aditya-adiraju <adiraju@student.ubc.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.18.1"
pause = "^0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
solve = "solver:main"
